--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # dependencies
 /node_modules
+/.env
+
+# aws configurations
+/src/config/config.json
 
 # testing
 /coverage
@@ -14,3 +18,15 @@ package-lock.json
 
 npm-debug.log*
 npm-error.log*
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
